--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Infinite scrolling</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Welcome</h1>
 
-    <ul id="list"></ul>
+    <div id="imageContainer"></div>
     <script src="script.js"></script>
 
   </body>
