--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Welcome</h1>
 
-    <div id="imageContainer"></div>
+    <div id="imageList"></div>
     <script src="script.js"></script>
 
   </body>
